--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,25 @@
   --primary-white: #fff;
   --primary-orange: #f9ab00;
   --primary-dark: rgba(255,255,255, 0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
 }
 
 body {
 font-family: "Roboto Condesed" sans-serif;
 }
 
-/**Navbar CSS **/
+/****Navbar CSS ****/
 
+nav {
+  z-index: 2;
+}
 .logo{
   padding: -1px;
   margin-top: -45px;
 }
 
-/*-- Menu Links --*/
+/*----- Menu Links -----*/
 nav a.nav-link {
   font-size: .8rem;
   letter-spacing: 0.0375rem;
@@ -44,10 +49,99 @@ nav ul li {
   height: 6rem !important;
 }
 
+@media(max-width: 768px) {
+  .navbar-brand {
+    width: 5rem;
+  }
+  
+  }
+
 .navbar-nav > li > a.active,  .navbar-nav > li > a.active:focus {
   border-top: 0.1875rem solid var(--primary-orange);
 }
 
 .navbar-nav > li > a:hover {
   border-top: 0.1875rem solid var(--primary-orange);
+}
+
+/****Header****/
+
+.header-wrapper {
+  position:relative;
+  background: url(./images/wall-and-laptop-background.jpg) no-repeat;
+  background-size:  cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info{
+  display:flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condesed", sans-serif ;
+  z-index: 1;
+}
+
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+
+
+/*----------Typed Text--------------*/
+
+.typed-text{
+  font-size: 2rem;
+  color:var(--primary-white);
+}
+
+@media(max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+    @media(max-width: 768px) {
+      .typed-text {
+        font-size: 1.3rem !important
+      }
+    }
+  }
+
+/*----------Header Main Offer Button--------------*/
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  text-decoration: none;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: var(--primary-white);
+  margin-top: 2rem;
+}
+
+.btn-main-offer:hover {
+text-decoration: none;
+color: var(--primary-white);
+background-color:  var(--primary-hover-red);
+transition: .2s ease-in-out;
+}
+
+/*****ParticlesJS******/
+.tsparticles-canvas-el{
+  position:absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media(max-width: 768px) {
+  .particles-canvas {
+display: none;
+  }
+
 }
