--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
 
 :root {
-  --primary-white: #fff;
+  --primary-white: #ffffff;
+  --primary-light-grey: #f4f4f4;
   --primary-orange: #f9ab00;
-  --primary-dark: rgba(255,255,255, 0);
+  --primary-dark: rgba(52,58,64);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
 }
@@ -170,4 +171,77 @@ display: none;
   .author{
     width: 10rem;
   }
+}
+
+/***Skills***/
+.skills{
+
+text-align: center;
+padding-bottom: 2rem;
+background: var(--primary-light-grey);
+
+
+}
+
+.skills h1 {
+  color: var(--primary-dark);
+  text-transform:uppercase;
+}
+
+.skills .firstRow{
+  display: flex;
+  justify-content: center;
+}
+
+.skills .secondRow{
+  display: flex;
+  justify-content: center;
+}
+
+.skills .circle {
+  position: relative;
+  margin: 0.375rem auto;
+  background: var(--primary-orange);
+  border-radius: 50%;
+  width: 3.125rem;
+  height: 3.125rem;
+}
+
+.skills .icon{
+  font-size: 2.0rem;
+  color: var(--primary-white);
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%)
+}
+
+.skills .box{
+  height: 18rem;
+  border-bottom: 0.3125rem solid var(--primary-orange);
+  padding: 0.650rem;
+  margin-bottom: 1.875rem;
+  background: var(--primary-white);
+}
+
+.skills .box:hover {
+  background: var(--primary-orange);
+  border-bottom: 0.3125rem solid var(--primary-dark);
+}
+
+.skills .box:hover .icon{
+  color: var(--primary-dark);
+
+}
+
+.skills .box:hover .circle{
+  background: var(--primary-white);
+  
+}
+
+@media(max-width: 768px) {
+  .skills h3{
+font-size: 1.5rem;
+  }
+
 }
