--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
-
-
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
-
 :root {
   --primary-white: #ffffff;
   --primary-light-grey: #f4f4f4;
   --primary-dark-grey: #f4f4f431;
   --primary-orange: #f9ab00;
-  --primary-dark: rgba(52,58,64);
+  --primary-dark: rgba(52, 58, 64);
   --primary-red: #ef4035;
   --primary-hover-red: #f33501;
   --primary-black: #000000;
@@ -16,7 +12,7 @@
 }
 
 body {
-font-family: "Roboto Condensed" sans-serif !important;
+  font-family: "Roboto Condensed" sans-serif !important;
 }
 
 /****Navbar CSS ****/
@@ -24,12 +20,14 @@ font-family: "Roboto Condensed" sans-serif !important;
 nav {
   z-index: 2;
 }
-.logo{
+
+.logo {
   padding: -1px;
   margin-top: -45px;
 }
 
 /*----- Menu Links -----*/
+
 nav a.nav-link {
   font-size: .8rem;
   letter-spacing: 0.0375rem;
@@ -40,7 +38,7 @@ nav ul li {
   text-transform: uppercase;
 }
 
-.navbar-nav > li > a {
+.navbar-nav>li>a {
   margin-right: 0.75rem;
   margin-left: 0.75rem;
   color: var(--primary-white) !important;
@@ -57,29 +55,28 @@ nav ul li {
   .navbar-brand {
     width: 5rem;
   }
-  
-  }
+}
 
-.navbar-nav > li > a.active,  .navbar-nav > li > a.active:focus {
+.navbar-nav>li>a.active, .navbar-nav>li>a.active:focus {
   border-top: 0.1875rem solid var(--primary-orange);
 }
 
-.navbar-nav > li > a:hover {
+.navbar-nav>li>a:hover {
   border-top: 0.1875rem solid var(--primary-orange);
 }
 
 /****Header****/
 
 .header-wrapper {
-  position:relative;
+  position: relative;
   background: url(./images/wall-and-laptop-background.jpg) no-repeat;
-  background-size:  cover;
+  background-size: cover;
   background-position: center;
   height: 90vh;
 }
 
-.main-info{
-  display:flex;
+.main-info {
+  display: flex;
   position: absolute;
   top: 0;
   left: 0;
@@ -89,7 +86,7 @@ nav ul li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Roboto Condesed", sans-serif ;
+  font-family: "Roboto Condesed", sans-serif;
   z-index: 1;
 }
 
@@ -103,26 +100,26 @@ nav ul li {
   text-transform: uppercase;
 }
 
-
 /*----------Typed Text--------------*/
 
-.typed-text{
+.typed-text {
   font-size: 2rem;
-  color:var(--primary-white);
+  color: var(--primary-white);
 }
 
 @media(max-width: 768px) {
   .main-info h1 {
     font-size: 1.7rem !important;
   }
-    @media(max-width: 768px) {
-      .typed-text {
-        font-size: 1.3rem !important
-      }
+  @media(max-width: 768px) {
+    .typed-text {
+      font-size: 1.3rem !important
     }
   }
+}
 
 /*----------Header Main Offer Button--------------*/
+
 .btn-main-offer {
   border: 1px solid var(--primary-red);
   text-transform: uppercase;
@@ -134,15 +131,16 @@ nav ul li {
 }
 
 .btn-main-offer:hover {
-text-decoration: none;
-color: var(--primary-white);
-background-color:  var(--primary-hover-red);
-transition: .2s ease-in-out;
+  text-decoration: none;
+  color: var(--primary-white);
+  background-color: var(--primary-hover-red);
+  transition: .2s ease-in-out;
 }
 
 /*****ParticlesJS******/
-.tsparticles-canvas-el{
-  position:absolute;
+
+.tsparticles-canvas-el {
+  position: absolute;
   height: 100vh;
   width: 100vw;
   z-index: 1;
@@ -150,9 +148,8 @@ transition: .2s ease-in-out;
 
 @media(max-width: 768px) {
   .particles-canvas {
-display: none;
+    display: none;
   }
-
 }
 
 /**********Author image**********/
@@ -163,45 +160,42 @@ display: none;
   align-items: center;
 }
 
-.author{
-
+.author {
   width: 400px;
   border-radius: 50%;
   padding: 0.3rem;
   border: 1px solid var(--primary-orange);
 }
 
-.about-heading{
+.about-heading {
   color: var(--primary-orange);
 }
 
 @media(max-width: 468px) {
-  .author{
+  .author {
     width: 10rem;
   }
 }
 
 /***Skills***/
-.skills{
 
-text-align: center;
-padding-bottom: 2rem;
-background: var(--primary-light-grey);
-
-
+.skills {
+  text-align: center;
+  padding-bottom: 2rem;
+  background: var(--primary-light-grey);
 }
 
 .skills h1 {
   color: var(--primary-dark);
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 
-.skills .firstRow{
+.skills .firstRow {
   display: flex;
   justify-content: center;
 }
 
-.skills .secondRow{
+.skills .secondRow {
   display: flex;
   justify-content: center;
 }
@@ -215,16 +209,16 @@ background: var(--primary-light-grey);
   height: 3.125rem;
 }
 
-.skills .icon{
+.skills .icon {
   font-size: 2.0rem;
   color: var(--primary-white);
   position: absolute;
   top: 50%;
-  left:50%;
+  left: 50%;
   transform: translate(-50%, -50%)
 }
 
-.skills .box{
+.skills .box {
   height: 18rem;
   border-bottom: 0.3125rem solid var(--primary-orange);
   padding: 0.650rem;
@@ -238,43 +232,38 @@ background: var(--primary-light-grey);
   border-bottom: 0.3125rem solid var(--primary-dark);
 }
 
-.skills .box:hover .icon{
+.skills .box:hover .icon {
   color: var(--primary-dark);
-
 }
 
-.skills .box:hover .circle{
+.skills .box:hover .circle {
   background: var(--primary-white);
-  
 }
 
 @media(max-width: 768px) {
-  .skills h3{
-font-size: 1.5rem;
+  .skills h3 {
+    font-size: 1.5rem;
   }
-
 }
 
 /********Portfolio*******/
 
-.portfolio-wrapper{
+.portfolio-wrapper {
   background: var(--primary-light-grey);
   padding: 3rem 0;
 }
 
-.portfolio-image{
+.portfolio-image {
   width: 15 rem;
   border: 1px solid var(--primary-orange);
   padding: 0 0.5rem;
 }
 
-
 .portfolio-image-box {
   display: flex;
-  position:relative;
+  position: relative;
   margin: 1rem;
 }
-
 
 /*------GitHub Box------*/
 
@@ -285,16 +274,16 @@ font-size: 1.5rem;
   margin-bottom: 1rem;
 }
 
-.github :hover{
- background: var(--primary-orange);
- border-radius: 7rem;
- border-width: -0.5rem;
- 
+.github :hover {
+  background: var(--primary-orange);
+  border-radius: 7rem;
+  border-width: -0.5rem;
 }
 
 /*-------- Overflow Box ---------*/
+
 .overflow {
-  position:absolute;
+  position: absolute;
   opacity: 1;
   background: var(--primary-black);
   width: 15rem;
@@ -307,106 +296,62 @@ font-size: 1.5rem;
 /*---------Contacts------*/
 
 .contact {
-  background:var(--primary-dark);
+  background: var(--primary-dark);
   padding: 3rem 0;
 }
 
-.contact h1 {
-  color:var(--primary-orange);
+.contact h1, h4, h5 {
+  color: var(--primary-orange);
   padding: 1.3rem 0;
   text-transform: uppercase;
 }
 
 .contact p {
-color: var(--primary-light-grey);
-font-size:  1.2rem;
+  color: var(--primary-light-grey);
+  font-size: 1.2rem;
 }
 
-/*-----Inputs-------*/
-
-.contact input, .contact textarea {
-  width: 100%;
-  box-sizing: border-box;
-  background: none;
-  resize: none;
-  border: 0;
-  border-bottom: 0.125rem solid var(--primary-light-grey);
-  border-radius: 0;
-  color:var(--primary-orange);
-  outline: 0 !important;
-  box-shadow: none !important;
-  top: 0;
-  margin-bottom: 1rem;
-  padding-left: 0 !important;
-}
-
-.contact .container{
-  padding: 4rem 0;
-}
-
-.contact input:focus, .contact textarea:focus {
-  background: transparent;
+.hirebox {
   color: var(--primary-orange);
-  border-bottom: 0.125rem solid var(--primary-dark-grey);
 }
 
-.contact textarea {
-  height: 12.2rem !important;
+.emailbox{
+  display: flex;
+
+  align-items: center;
 }
 
-.contact-btn {
-  margin: 1rem 0 0 0;
-  width: 100%;
-  background: none;
+.mediabox {
+  float: right;
 }
 
-.line{
-  position: relative;
-  top: -0.8rem;
-  width:0;
-  height: 0.125rem;
-  background: var(--primary-orange);
-  display: inline-block;
+.mediabox h3 {
+  color: var(--primary-orange);
+  display: flex;
+  justify-content: center;
 }
 
-input:focus+.line, textarea:focus+.line {
-  width:100%;
-  transition: width 0.5s ease-in-out;
+.socialmedia {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+}
+
+.socialmedia li {
+  margin-right: 0.7rem;
 }
 
 
-input.form-control {
-  margin: -0.3rem 0;
+/*---------Footer--------*/
+
+.footer{
+  background: var(--primary-black);
+  color: var(--primary-orange);
 }
-
-textarea.form-control {
-  margin: -0.3rem 0;
-}
-
-.error-message { 
-  color:var(--primary-white);
-  background: var(--primary-hover-red);
-  text-align: left;
-}
-
-.success-message {
-font-weight: 900;
-
-color: var(--primary-green);
-
-}
-
 /*---------Media---------*/
+
 @media (max-width: 768px) {
-  .contact{
+  .contact {
     overflow-x: hidden;
-  }
-
-  .contact .container{
-    padding: 0 1rem;
-  }
-
-  .contact p{
-    padding: 0 0.4rem;
   }
 }
